Revision history for Plack::Middleware::BlockHeaderInjection

        - Added POD explaining what header injections are.

	- Added ACKNOWLEDGEMENTS section to POD.

v0.1.0  2014-06-26

        - First release on CPAN.