@@ -4,6 +4,8 @@ Revision history for Plack::Middleware::BlockHeaderInjection
 
 	- Added ACKNOWLEDGEMENTS section to POD.
 
+        - Added config for travis-ci in git repo.
+
 v0.1.0  2014-06-26
 
         - First release on CPAN.
